Remove unneeded include

BUG:457152